# fridge-calendar

./: .gitignore  README.md  alma_calendar.css  alma_calendar_example.html  birthdays_example.csv  fridge_calendar_example.html  generate.py  pyproject.toml  test_generate.py
