[tool.poetry]
name = "fridge-calendar"
version = "0.1"
description = "Generate a monthly calendar including holidays and birthdays as printable HTML"
authors = ["Markus Straub"]

[tool.poetry.dependencies]
python = ">=3.9"
holidays = "^0.12"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = ">=4"
pytest = "^6"
ipykernel = "^6.6.0"

[tool.pytest.ini_options]
addopts = ["-ra", "-W error"]

[tool.black]
#line-length = 100
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
